--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Logi</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_intro">introActivity</string>
+    <string name="default_status_msg">연결된 장비 없음</string>
 </resources>
