--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Logi</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_intro">introActivity</string>
-    <string name="default_status_msg">연결된 장비 없음</string>
+    <string name="action_save">Save</string>
+    <string name="title_activity_intro">Logi</string>
+    <string name="default_status_msg">Click Bluetooth Icon</string>
+    <string name="title_activity_button_nav">ButtonNavActivity</string>
+    <string name="menu1">Disp</string>
+    <string name="menu2">Log</string>
+    <string name="menu3">Chart</string>
 </resources>
